import UIKit

enum ImageAsset: String {
    case userPick = "photo.profile"
    case exitProfileButton = "exit profile button"
}
